# H5TurboPFor

./: CMakeLists.txt  H5TurboPFor-Example-Jupyter.ipynb  README.md  das_example.h5  py-example.py  setup.sh  turbopfor_h5plugin.c  turbopfor_h5plugin.h
